// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDropdown activator should render an icon on desktop if email doesnt exist 1`] = `
<UnstyledLink
  className="Email"
  onClick={[Function]}
>
  <Person
    size={24}
  />
</UnstyledLink>
`;

exports[`AccountDropdown activator should render an icon on mobile 1`] = `
<UnstyledLink
  className="Email"
  onClick={[Function]}
>
  <Person
    size={24}
  />
</UnstyledLink>
`;

exports[`AccountDropdown activator should render email address on desktop 1`] = `
<UnstyledLink
  className="Email"
  onClick={[Function]}
>
  test@testing.com
   
  <ArrowDropDown />
</UnstyledLink>
`;

exports[`AccountDropdown should render correctly 1`] = `
<Popover
  bottom={true}
  left={true}
  onClose={[Function]}
  open={false}
  portalId="popover-portal"
  right={true}
  trigger={
    <Context.Consumer>
      [Function]
    </Context.Consumer>
  }
>
  <ActionList
    actions={
      Array [
        Object {
          "component": [Function],
          "content": <React.Fragment>
            link
             
          </React.Fragment>,
          "external": undefined,
          "label": "link",
          "to": "link",
        },
        Object {
          "content": <React.Fragment>
            link2
            <div
              className="FloatIcon"
            >
              <MockIcon
                size={15}
              />
            </div>
          </React.Fragment>,
          "external": true,
          "label": "link2",
          "to": "link2",
        },
        Object {
          "content": <React.Fragment>
            link3
             
          </React.Fragment>,
          "external": undefined,
          "label": "link3",
          "onClick": [Function],
          "to": undefined,
        },
        Object {
          "component": [Function],
          "content": <React.Fragment>
            link4
             
            <div
              className="FloatIcon"
            >
              <Tag
                color="blue"
              >
                LABS
              </Tag>
            </div>
          </React.Fragment>,
          "external": undefined,
          "label": "link4",
          "to": "link",
        },
      ]
    }
    className="AccountList"
    groupByKey="section"
    onClick={[Function]}
  />
</Popover>
`;
